Refactor third party authentication to be an authentication strategy Add third party authentication to authenticate use case Remove third party authentication use case Remove session and session components
