# src/infrastructure/api/controllers/getAuthenticatedUserController.go
@@ -3,7 +3,6 @@ package controllers
 import (
 	"go-uaa/src/application/getAuthenticatedUser"
 	"go-uaa/src/domain/internals"
-	"go-uaa/src/domain/session"
 	"go-uaa/src/domain/user"
 	"go-uaa/src/infrastructure/api"
 	"go-uaa/src/infrastructure/dto"
@@ -19,7 +18,6 @@ type GetAuthenticatedUserController struct {
 	userToResponseTransformer   *transformers.UserToResponseTransformer
 	dtoSerializer               *dto.EchoDTOSerializer
 	errorTransformer            *transformers.ErrorToEchoErrorTransformer
-	sessionFinder               *api.HTTPSessionFinder
 }
 
 func (controller *GetAuthenticatedUserController) Handle(c echo.Context) error {
@@ -28,20 +26,15 @@ func (controller *GetAuthenticatedUserController) Handle(c echo.Context) error {
 	if err != nil {
 		return controller.errorTransformer.Transform(err)
 	}
-	var requestSession *session.Session
-	if accessToken == nil {
-		requestSession, err = controller.sessionFinder.Find(request)
-	}
 	if err != nil {
 		return controller.errorTransformer.Transform(err)
 	}
 
 	ctx := request.Context()
 	useCaseRequest := getAuthenticatedUser.GetAuthenticatedUserRequest{
-		Token:   accessToken,
-		Session: requestSession,
+		Token: accessToken,
 	}
-	useCaseResponse := controller.useCaseExecutor.Execute(ctx, controller.getAuthenticatedUserUseCase, &useCaseRequest, nil, nil)
+	useCaseResponse := controller.useCaseExecutor.Execute(ctx, controller.getAuthenticatedUserUseCase, &useCaseRequest, nil)
 	if useCaseResponse.Err != nil {
 		return controller.errorTransformer.Transform(useCaseResponse.Err)
 	}
@@ -50,7 +43,7 @@ func (controller *GetAuthenticatedUserController) Handle(c echo.Context) error {
 	return controller.dtoSerializer.Serialize(c, userResponse)
 }
 
-func NewGetAuthenticatedUserController(useCase *getAuthenticatedUser.GetAuthenticatedUserUseCase, useCaseExecutor *internals.AuthorizedUseCaseExecutor, accessTokenFinder *api.HTTPAccessTokenFinder, userTransformer *transformers.UserToResponseTransformer, dtoSerializer *dto.EchoDTOSerializer, errorTransformer *transformers.ErrorToEchoErrorTransformer, sessionFinder *api.HTTPSessionFinder) *GetAuthenticatedUserController {
+func NewGetAuthenticatedUserController(useCase *getAuthenticatedUser.GetAuthenticatedUserUseCase, useCaseExecutor *internals.AuthorizedUseCaseExecutor, accessTokenFinder *api.HTTPAccessTokenFinder, userTransformer *transformers.UserToResponseTransformer, dtoSerializer *dto.EchoDTOSerializer, errorTransformer *transformers.ErrorToEchoErrorTransformer) *GetAuthenticatedUserController {
 	controller := GetAuthenticatedUserController{
 		getAuthenticatedUserUseCase: useCase,
 		useCaseExecutor:             useCaseExecutor,
@@ -58,7 +51,6 @@ func NewGetAuthenticatedUserController(useCase *getAuthenticatedUser.GetAuthenti
 		userToResponseTransformer:   userTransformer,
 		dtoSerializer:               dtoSerializer,
 		errorTransformer:            errorTransformer,
-		sessionFinder:               sessionFinder,
 	}
 	return &controller
 }
