# src/infrastructure/api/controllers/getUserController.go
@@ -3,7 +3,6 @@ package controllers
 import (
 	"go-uaa/src/application/getUser"
 	"go-uaa/src/domain/internals"
-	"go-uaa/src/domain/session"
 	"go-uaa/src/domain/user"
 	"go-uaa/src/infrastructure/api"
 	"go-uaa/src/infrastructure/dto"
@@ -21,7 +20,6 @@ type GetUserController struct {
 	dtoSerializer     *dto.EchoDTOSerializer
 	userTransformer   *transformers.UserToResponseTransformer
 	errorTransformer  *transformers.ErrorToEchoErrorTransformer
-	sessionFinder     *api.HTTPSessionFinder
 }
 
 func (controller *GetUserController) Handle(c echo.Context) error {
@@ -29,10 +27,6 @@ func (controller *GetUserController) Handle(c echo.Context) error {
 	accessToken, err := controller.accessTokenFinder.Find(request)
 	if err != nil {
 		return controller.errorTransformer.Transform(err)
-	}
-	var requestSession *session.Session
-	if accessToken == nil {
-		requestSession, err = controller.sessionFinder.Find(request)
 	}
 	if err != nil {
 		return controller.errorTransformer.Transform(err)
@@ -46,7 +40,7 @@ func (controller *GetUserController) Handle(c echo.Context) error {
 	userRequest := getUser.GetUserRequest{
 		UserId: userId,
 	}
-	useCaseResponse := controller.useCaseExecutor.Execute(ctx, controller.getUserUseCase, &userRequest, accessToken, requestSession)
+	useCaseResponse := controller.useCaseExecutor.Execute(ctx, controller.getUserUseCase, &userRequest, accessToken)
 	if useCaseResponse.Err != nil {
 		return controller.errorTransformer.Transform(useCaseResponse.Err)
 	}
@@ -54,7 +48,7 @@ func (controller *GetUserController) Handle(c echo.Context) error {
 	return controller.errorTransformer.Transform(controller.dtoSerializer.Serialize(c, userResponse))
 }
 
-func NewGetUserController(getUserUseCase *getUser.GetUserUseCase, useCaseExecutor *internals.AuthorizedUseCaseExecutor, accessTokenFinder *api.HTTPAccessTokenFinder, dtoSerializer *dto.EchoDTOSerializer, userTransformer *transformers.UserToResponseTransformer, errorTransformer *transformers.ErrorToEchoErrorTransformer, sessionFinder *api.HTTPSessionFinder) *GetUserController {
+func NewGetUserController(getUserUseCase *getUser.GetUserUseCase, useCaseExecutor *internals.AuthorizedUseCaseExecutor, accessTokenFinder *api.HTTPAccessTokenFinder, dtoSerializer *dto.EchoDTOSerializer, userTransformer *transformers.UserToResponseTransformer, errorTransformer *transformers.ErrorToEchoErrorTransformer) *GetUserController {
 	controller := GetUserController{
 		getUserUseCase:    getUserUseCase,
 		useCaseExecutor:   useCaseExecutor,
@@ -62,7 +56,6 @@ func NewGetUserController(getUserUseCase *getUser.GetUserUseCase, useCaseExecuto
 		dtoSerializer:     dtoSerializer,
 		userTransformer:   userTransformer,
 		errorTransformer:  errorTransformer,
-		sessionFinder:     sessionFinder,
 	}
 	return &controller
 }
